--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,8 @@ project(testsets)
 
 set(CMAKE_CXX_STANDARD 14)
 
+add_definitions("-Werror=return-type")
+
 add_executable(testsets main.cpp BitSet.cpp BitSet.h Grammar.cpp Grammar.h
         GramNames.cpp GramNames.h GramSource.cpp GramSource.h GramSourceSimple.cpp GramSourceSimple.h
         IGrammar.h Rules.cpp Rules.h TBitSet.cpp TBitSet.h TokenSet.cpp TokenSet.h
